Package_Tools/include-C/ibus-1.0/in_arbeit/fertig/ibusxevent.pp


function ibus_x_event_get_type:TGType;cdecl;external;
{*
 * ibus_x_event_new:
 * @first_property_name: Name of the first property.
 * @...: the NULL-terminated arguments of the properties and values.
 *
 * Create a new #IBusXEvent.
 *
 * Returns: A newly allocated #IBusXEvent. E.g.
 * ibus_x_event_new ("event-type", IBUS_X_EVENT_KEY_PRESS, NULL);
  }
(* Const before type ignored *)
function ibus_x_event_new(first_property_name:Pgchar; args:array of const):PIBusXEvent;cdecl;external;
function ibus_x_event_new(first_property_name:Pgchar):PIBusXEvent;cdecl;external;
{*
 * ibus_x_event_get_version:
 * @event: An #IBusXEvent.
 *
 * Returns: Version of #IBusXEvent
  }
function ibus_x_event_get_version(event:PIBusXEvent):Tguint;cdecl;external;
{*
 * ibus_x_event_get_event_type:
 * @event: An #IBusXEvent.
 *
 * Returns: IBusXEventType of #IBusXEvent
  }
function ibus_x_event_get_event_type(event:PIBusXEvent):TIBusXEventType;cdecl;external;
{*
 * ibus_x_event_get_window:
 * @event: An #IBusXEvent.
 *
 * Returns: XID of #IBusXEvent
  }
function ibus_x_event_get_window(event:PIBusXEvent):Tguint32;cdecl;external;
{*
 * ibus_x_event_get_send_event:
 * @event: An #IBusXEvent.
 *
 * Returns: send_event of #IBusXEvent
  }
function ibus_x_event_get_send_event(event:PIBusXEvent):Tgint8;cdecl;external;
{*
 * ibus_x_event_get_serial:
 * @event: An #IBusXEvent.
 *
 * Returns: serial of #IBusXEvent
  }
function ibus_x_event_get_serial(event:PIBusXEvent):Tgulong;cdecl;external;
{*
 * ibus_x_event_get_time:
 * @event: An #IBusXEvent.
 *
 * Returns: time of #IBusXEvent
  }
function ibus_x_event_get_time(event:PIBusXEvent):Tguint32;cdecl;external;
{*
 * ibus_x_event_get_state:
 * @event: An #IBusXEvent.
 *
 * Returns: state of #IBusXEvent
  }
function ibus_x_event_get_state(event:PIBusXEvent):Tguint;cdecl;external;
{*
 * ibus_x_event_get_keyval:
 * @event: An #IBusXEvent.
 *
 * Returns: keyval of #IBusXEvent
  }
function ibus_x_event_get_keyval(event:PIBusXEvent):Tguint;cdecl;external;
{*
 * ibus_x_event_get_length:
 * @event: An #IBusXEvent.
 *
 * Returns: length of #IBusXEvent
  }
function ibus_x_event_get_length(event:PIBusXEvent):Tgint;cdecl;external;
{*
 * ibus_x_event_get_string:
 * @event: An #IBusXEvent.
 *
 * Returns: string of #IBusXEvent
  }
(* Const before type ignored *)
function ibus_x_event_get_string(event:PIBusXEvent):Pgchar;cdecl;external;
{*
 * ibus_x_event_get_hardware_keycode:
 * @event: An #IBusXEvent.
 *
 * Returns: hardware keycode of #IBusXEvent
  }
function ibus_x_event_get_hardware_keycode(event:PIBusXEvent):Tguint16;cdecl;external;
{*
 * ibus_x_event_get_group:
 * @event: An #IBusXEvent.
 *
 * Returns: group of #IBusXEvent
  }
function ibus_x_event_get_group(event:PIBusXEvent):Tguint8;cdecl;external;
{*
 * ibus_x_event_get_is_modifier:
 * @event: An #IBusXEvent.
 *
 * Returns: is_modifier of #IBusXEvent
  }
function ibus_x_event_get_is_modifier(event:PIBusXEvent):Tgboolean;cdecl;external;
{*
 * ibus_x_event_get_subwindow:
 * @event: An #IBusXEvent.
 *
 * Returns: subwindow of #IBusXEvent
  }
function ibus_x_event_get_subwindow(event:PIBusXEvent):Tguint32;cdecl;external;
{*
 * ibus_x_event_get_root:
 * @event: An #IBusXEvent.
 *
 * Returns: root window of #IBusXEvent
  }
function ibus_x_event_get_root(event:PIBusXEvent):Tguint32;cdecl;external;
{*
 * ibus_x_event_get_x:
 * @event: An #IBusXEvent.
 *
 * Returns: x of #IBusXEvent
  }
function ibus_x_event_get_x(event:PIBusXEvent):Tgint;cdecl;external;
{*
 * ibus_x_event_get_y:
 * @event: An #IBusXEvent.
 *
 * Returns: y of #IBusXEvent
  }
function ibus_x_event_get_y(event:PIBusXEvent):Tgint;cdecl;external;
{*
 * ibus_x_event_get_x_root:
 * @event: An #IBusXEvent.
 *
 * Returns: x-root of #IBusXEvent
  }
function ibus_x_event_get_x_root(event:PIBusXEvent):Tgint;cdecl;external;
{*
 * ibus_x_event_get_y_root:
 * @event: An #IBusXEvent.
 *
 * Returns: y-root of #IBusXEvent
  }
function ibus_x_event_get_y_root(event:PIBusXEvent):Tgint;cdecl;external;
{*
 * ibus_x_event_get_same_screen:
 * @event: An #IBusXEvent.
 *
 * Returns: same_screen of #IBusXEvent
  }
function ibus_x_event_get_same_screen(event:PIBusXEvent):Tgboolean;cdecl;external;
{*
 * ibus_x_event_get_purpose:
 * @event: An #IBusXEvent.
 *
 * Returns: purpose of #IBusXEvent
  }
(* Const before type ignored *)
function ibus_x_event_get_purpose(event:PIBusXEvent):Pgchar;cdecl;external;
{$endif}

implementation

{ was #define dname def_expr }
function IBUS_TYPE_EXTENSION_EVENT : longint; { return type might be wrong }
  begin
    IBUS_TYPE_EXTENSION_EVENT:=ibus_extension_event_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IBUS_EXTENSION_EVENT(obj : longint) : longint;
begin
  IBUS_EXTENSION_EVENT:=G_TYPE_CHECK_INSTANCE_CAST(obj,IBUS_TYPE_EXTENSION_EVENT,IBusExtensionEvent);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IBUS_EXTENSION_EVENT_CLASS(klass : longint) : longint;
begin
  IBUS_EXTENSION_EVENT_CLASS:=G_TYPE_CHECK_CLASS_CAST(klass,IBUS_TYPE_EXTENSION_EVENT,IBusExtensionEventClass);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IBUS_IS_EXTENSION_EVENT(obj : longint) : longint;
begin
  IBUS_IS_EXTENSION_EVENT:=G_TYPE_CHECK_INSTANCE_TYPE(obj,IBUS_TYPE_EXTENSION_EVENT);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IBUS_IS_EXTENSION_EVENT_CLASS(klass : longint) : longint;
begin
  IBUS_IS_EXTENSION_EVENT_CLASS:=G_TYPE_CHECK_CLASS_TYPE(klass,IBUS_TYPE_EXTENSION_EVENT);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IBUS_EXTENSION_EVENT_GET_CLASS(obj : longint) : longint;
begin
  IBUS_EXTENSION_EVENT_GET_CLASS:=G_TYPE_INSTANCE_GET_CLASS(obj,IBUS_TYPE_EXTENSION_EVENT,IBusExtensionEventClass);
end;

{ was #define dname def_expr }
function IBUS_TYPE_X_EVENT : longint; { return type might be wrong }
  begin
    IBUS_TYPE_X_EVENT:=ibus_x_event_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IBUS_X_EVENT(obj : longint) : longint;
begin
  IBUS_X_EVENT:=G_TYPE_CHECK_INSTANCE_CAST(obj,IBUS_TYPE_X_EVENT,IBusXEvent);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IBUS_X_EVENT_CLASS(klass : longint) : longint;
begin
  IBUS_X_EVENT_CLASS:=G_TYPE_CHECK_CLASS_CAST(klass,IBUS_TYPE_X_EVENT,IBusXEventClass);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IBUS_IS_X_EVENT(obj : longint) : longint;
begin
  IBUS_IS_X_EVENT:=G_TYPE_CHECK_INSTANCE_TYPE(obj,IBUS_TYPE_X_EVENT);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IBUS_IS_X_EVENT_CLASS(klass : longint) : longint;
begin
  IBUS_IS_X_EVENT_CLASS:=G_TYPE_CHECK_CLASS_TYPE(klass,IBUS_TYPE_X_EVENT);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IBUS_X_EVENT_GET_CLASS(obj : longint) : longint;
begin
  IBUS_X_EVENT_GET_CLASS:=G_TYPE_INSTANCE_GET_CLASS(obj,IBUS_TYPE_X_EVENT,IBusXEventClass);
end;


end.
